ADD. accept only pdf and some css

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </div>
                 <div class="email">
                     <label for="email">Email-id</label>
-                    <input type="email" id="email" name="email" required>
+                    <input type="email" id="email" name="email" placeholder="example@example.com" required>
                 </div>
                 <div class="department">
                     <label for="department">Department :</label>
@@ -94,12 +94,11 @@
                 </div>
                 <div class="resume">
                     <label for="resume">Resume</label>
-                    <input type="file" id="resume" name="resume-file" placeholder="upload your resume &lt 5mb pdf format">
+                    <input type="file" id="resume" name="resume-file" accept=".pdf">
                 </div>
                 <div class="submit">
-                    <input type="submit" id="submit" name="submit">
+                    <input type="submit" id="submit" name="submit" value="submit">
                 </div>
-
             </form>
         </div>
     </body>
